--- a/src/containers/login/views/login.less
+++ b/src/containers/login/views/login.less
@@ -218,8 +218,9 @@
     align-items: center;
   }
   .mobileBottomTop{
-    position:absolute;
-    bottom:60px;
+    margin-top: 1rem;
+    // position:absolute;
+    // bottom:60px;
    }
   .mobileButton{
     border: 1px solid !important;
@@ -229,8 +230,8 @@
     background-color: transparent;
 }
 .labelStyle{
-  bottom:0;
-  position: absolute;
+  // bottom:0;
+  // position: absolute;
 }
 .mobileSignup{
   // margin-top: 5% !important;
